--- a/src/vs/workbench/contrib/DevSphere/browser/media/main.css
+++ b/src/vs/workbench/contrib/DevSphere/browser/media/main.css
@@ -21,6 +21,9 @@
 @import './components/dropdown.css';
 @import './components/notifications.css';
 
+/* Feature-specific styles */
+@import './devSphereAPIKeys.css';
+
 /* Animations */
 @import './animations.css';
 
